--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Lynne的博客
-subtitle: 非虚构设计师
-description: Lynne的博客 非虚构设计 前端 设计 代码 JavaScript sketch
-keywords: Lynne的博客 非虚构设计 前端 设计 代码 JavaScript sketch
-author: fus
+title: Lynnete's Blog
+subtitle: 为真实的世界创作
+description: Lynnete 博客 非虚构设计 设计 读书 geek
+keywords: Lynnete 博客 非虚构设计 设计 读书 geek
+author: 🧘🏻‍♀️Lynnete
 language: zh-Hans
 timezone:
 
